--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         </title>
     </head>
     <body>
-        <h1>
-            Hello, World!
-        </h1>
+        <h1>Hello, World!</h1>
+        <p>I am learning Web Development</p>
     </body>
 </html>
